# grafica_cpp

./: .gitignore  CMakeLists.txt
CMakeConfigFiles/: root_directory.h.in
source/: CMakeLists.txt
source/examples/: CMakeLists.txt  ex_lighting.cpp  ex_lighting_texture.cpp  ex_projections.cpp  ex_texture_boo.cpp
source/examples_cg/: CMakeLists.txt  ex_4shapes.cpp  ex_joystick.cpp  ex_quad_pro.cpp  ex_scene_graph_3dcars.cpp
source/examples_cpp/: CMakeLists.txt  ex_ecs_basic.cpp  ex_struct.cpp  ex_template.cpp  ex_threads.cpp  ex_vector.cpp
source/examples_libs/: CMakeLists.txt  ex_dr_wav.cpp  ex_entt.cpp  ex_imgui.cpp  ex_openal.cpp
source/grafica/: CMakeLists.txt  basic_shapes.cpp  basic_shapes.h  easy_shaders.cpp  easy_shaders.h  gpu_shape.cpp  gpu_shape.h  load_shaders.cpp  load_shaders.h  performance_monitor.cpp  performance_monitor.h  scene_graph.cpp  scene_graph.h  shape.cpp  shape.h  simple_eigen.h  simple_timer.h  transformations.cpp  transformations.h
